<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <EditText
        android:id="@+id/numericTxtInput"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:layout_marginStart="232dp"
        android:ems="10"
        android:hint="00.0"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textAlignment="viewStart"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <EditText
        android:id="@+id/timeTxtInput"
        android:layout_width="52dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="00.0"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <Button
        android:id="@+id/StopBtn"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:background="@color/redBtn"
        android:text="Stop"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454" />

    <EditText
        android:id="@+id/numdutycyclesTxtInput"
        android:layout_width="43dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="000"
        android:inputType="number"
        android:maxLength="3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337" />

    <TextView
        android:id="@+id/singleAxisTxt"
        android:layout_width="205dp"
        android:layout_height="36dp"
        android:text="@string/distance_txt"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/cycleControlTxt"
        android:layout_width="199dp"
        android:layout_height="35dp"
        android:text="@string/pause_txt"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/unitTxt"
        android:layout_width="38dp"
        android:layout_height="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/mm_txt"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <TextView
        android:id="@+id/timeUnitsTxt"
        android:layout_width="38dp"
        android:layout_height="27dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sec_txt"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.82"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/numDutyCyclesTxt"
        android:layout_width="215dp"
        android:layout_height="36dp"
        android:text="@string/compressions_txt"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <Button
        android:id="@+id/disconnectBtn"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/actionModeSplitBackground"
        android:text="@string/disconnect_txt"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/cycleBtn"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/greenBtn"
        android:text="Cycle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <TextView
        android:id="@+id/cycleTxt"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Cycles"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <ProgressBar
        android:id="@+id/pb"
        style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
        android:layout_width="287dp"
        android:layout_height="20dp"
        android:layout_below="@id/cycleTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <TextView
        android:id="@+id/cycleProgressTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/cyclesRemainingTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:text="100"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hoursTitleTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/minuteTitleTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/secondTitleTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="0"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="352dp" />

    <TextView
        android:id="@+id/hoursTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="@string/hour_txt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/minuteTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="@string/minute_txt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/secondTxt"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:background="@android:color/background_dark"
        android:text="@string/second_txt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="382dp" />


</android.support.constraint.ConstraintLayout>